Fixed squished event condition ui

--- a/css/calendar_input_style.css
+++ b/css/calendar_input_style.css
@@ -1012,21 +1012,19 @@ ol.example li.placeholder:before {
 
 .group .handle{
 	-webkit-box-flex: 1;      /* OLD - iOS 6-, Safari 3.1-6 */
--moz-box-flex: 1;         /* OLD - Firefox 19- */
-
--webkit-flex: 1;          /* Chrome */
--ms-flex: 1;              /* IE 10 */
-flex: 1;                  /* NEW, Spec - Opera 12.1, Firefox 20+ */
+	-moz-box-flex: 1;         /* OLD - Firefox 19- */
+	-webkit-flex: 1;          /* Chrome */
+	-ms-flex: 1;              /* IE 10 */
+	flex: 1;                  /* NEW, Spec - Opera 12.1, Firefox 20+ */
 	flex-grow:0;
 }
 
 .group > .group_list{
 	-webkit-box-flex: 1;      /* OLD - iOS 6-, Safari 3.1-6 */
--moz-box-flex: 1;         /* OLD - Firefox 19- */
-
--webkit-flex: 1;          /* Chrome */
--ms-flex: 1;              /* IE 10 */
-flex: 1;                  /* NEW, Spec - Opera 12.1, Firefox 20+ */
+	-moz-box-flex: 1;         /* OLD - Firefox 19- */
+	-webkit-flex: 1;          /* Chrome */
+	-ms-flex: 1;              /* IE 10 */
+	flex: 1;                  /* NEW, Spec - Opera 12.1, Firefox 20+ */
 	flex-grow:1;
 	order:2;
 	min-height:34px;
@@ -1159,7 +1157,7 @@ flex: 1;                  /* NEW, Spec - Opera 12.1, Firefox 20+ */
 
 .condition_container .condition_type{
 	order:3;
-	width:auto;
+	max-width:75%;
 }
 
 .condition_container .moon_select{
@@ -1183,6 +1181,7 @@ flex: 1;                  /* NEW, Spec - Opera 12.1, Firefox 20+ */
 	order:5;
 	flex-wrap: wrap;
 	flex-grow:1;
+	min-width:25%;
 }
 
 .condition_container .input_container input{
